# lcd1602

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: Kernel.yml  c-cpp.yml  rpi64Kernel.yml
displayinfo/: displayinfo.c  displayinfo.ino  displayinfo4lcd.c  displayinfo4lcd.c.i2c  getinfo.h  lcd1602.h  lcdinfo.sh
